Add localizables for new views

--- a/MarvelAppUIKit/Localizables/en.lproj/Localizable.strings
+++ b/MarvelAppUIKit/Localizables/en.lproj/Localizable.strings
@@ -32,3 +32,10 @@
 "ComicsCellComicTitle" = "Comics title";
 "ComicsCellComicWritters" = "Comics writters";
 "ComicsCellComicDescription" = "Comics description";
+
+// EmptySearchListView
+"EmptySearchListViewLabelMessage" = "Start typing to find particular comics.";
+"EmptySearchListViewComicsNotFound" = "Comics not found. Try providing a correct title.";
+
+// SearchListViewController
+"SearchListViewControllerSearchTextFieldPlaceholder" = "Search comics by title";
