--- a/MarvelAppUIKit/Localizables/pl.lproj/Localizable.strings
+++ b/MarvelAppUIKit/Localizables/pl.lproj/Localizable.strings
@@ -32,3 +32,10 @@
 "ComicsCellComicTitle" = "Tytuł komiksu";
 "ComicsCellComicWritters" = "Autorzy komiksu";
 "ComicsCellComicDescription" = "Opis komiksu";
+
+// EmptySearchListView
+"EmptySearchListViewLabelMessage" = "Zacznij pisać aby znaleźć dane komiksy.";
+"EmptySearchListViewComicsNotFound" = "Nie znaleziono komiksów. Podaj poprawny tytuł.";
+
+// SearchListViewController
+"SearchListViewControllerSearchTextFieldPlaceholder" = "Szukaj komiksów po tytule";
