--- a/MarvelAppUIKit/Localizables/pl.lproj/Localizable.strings
+++ b/MarvelAppUIKit/Localizables/pl.lproj/Localizable.strings
@@ -42,3 +42,6 @@
 "SearchListViewControllerAlertTitle" = "Błąd sieci";
 "SearchListViewControllerAlertMessage" = "Nie można pobrać komiksów. Podaj poprawny tytuł.";
 "SearchListViewControllerAlertButtonTitle" = "Ok";
+
+// DetailComicsView
+"DetailComicsViewTitle" = "Witaj w szczegółowym widoku";
