--- a/MarvelAppUIKit/Localizables/en.lproj/Localizable.strings
+++ b/MarvelAppUIKit/Localizables/en.lproj/Localizable.strings
@@ -27,6 +27,11 @@
 
 // ComicsListViewController
 "ComicsListViewController" = "Marvel Comics";
+"ComicsListViewControllerErrorWhileGetComicsTitle" = "Network Error";
+"ComicsListViewControllerErrorWhileGetComicsMessage" = "Unable to fetch comics. Try again.";
+"ComicsListViewControllerErrorWhileGetMoreComicsTitle" = "Network Error";
+"ComicsListViewControllerErrorWhileGetMoreComicsMessage" = "Unable to fetch more comics. Try again.";
+"ComicsListViewControllerAlertButtonTitle" = "Ok";
 
 // ComicsCell
 "ComicsCellComicTitle" = "Comics title";
